--- a/DCS.Alternative.Launcher/Controls/InstallationControl.xaml
+++ b/DCS.Alternative.Launcher/Controls/InstallationControl.xaml
@@ -29,7 +29,7 @@
                 <ColumnDefinition Width="20" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="20" />
-                <ColumnDefinition Width="60" />
+                <ColumnDefinition Width="75" />
                 <ColumnDefinition Width="20" />
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="1"
@@ -45,7 +45,7 @@
                        FontSize="16"
                        Text="DIRECTORY" />
             <TextBlock Grid.Column="7"
-                       HorizontalAlignment="Left"
+                       HorizontalAlignment="Center"
                        FontSize="16"
                        Text="STATUS" />
         </Grid>
@@ -98,7 +98,7 @@
                             <TextBlock HorizontalAlignment="Center"
                                        FontSize="16"
                                        Foreground="#FFFFFFFF"
-                                       Text="Yes"
+                                       Text="VALID"
                                        TextAlignment="Center" />
                         </Border>
                         <Border Grid.Column="7"
@@ -109,7 +109,7 @@
                             <TextBlock HorizontalAlignment="Center"
                                        FontSize="16"
                                        Foreground="#FFFFFFFF"
-                                       Text="No"
+                                       Text="INVALID"
                                        TextAlignment="Center" />
                         </Border>
                     </Grid>
