--- a/DCS.Alternative.Launcher/Views/Settings/Controls/ViewportsSettingsControl.xaml
+++ b/DCS.Alternative.Launcher/Views/Settings/Controls/ViewportsSettingsControl.xaml
@@ -136,8 +136,11 @@
                             <StackPanel Grid.Row="0"
                                         Grid.RowSpan="2"
                                         Grid.Column="1"
-                                        Margin="0,0,10,0">
+                                        Margin="0,0,10,0"
+                                        VerticalAlignment="Center">
                                 <Button Padding="10,3"
+                                        VerticalAlignment="Center"
+                                        Background="#FF006F00"
                                         Command="{Binding DataContext.EditViewportsCommand, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"
                                         CommandParameter="{Binding}"
                                         Content="EDIT" />
