--- a/DCS.Alternative.Launcher/Windows/MainWindow.xaml
+++ b/DCS.Alternative.Launcher/Windows/MainWindow.xaml
@@ -162,7 +162,7 @@
                                     </ItemsControl.ItemTemplate>
                                 </ItemsControl>
 
-                                <Grid Margin="0,0,20,0"
+                                <Grid Margin="0,10,20,0"
                                       HorizontalAlignment="Right"
                                       VerticalAlignment="Center">
                                     <Grid.ColumnDefinitions>
@@ -170,13 +170,12 @@
                                         <ColumnDefinition />
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Grid.Column="0"
-                                               Margin="0,11,10,0"
+                                               Margin="0,0,10,0"
                                                HorizontalAlignment="Right"
                                                FontFamily="{StaticResource Prototype}"
                                                FontSize="11"
                                                Foreground="#FFFFFFFF"
-                                               Text="PROFILE:"
-                                               Visibility="{Binding Profiles, Converter={x:Static data:EnumerableCountGreaterThanOneVisibilityConverter.Instance}, ConverterParameter=reverse}" />
+                                               Text="PROFILE" />
                                     <TextBlock Grid.Column="1"
                                                Margin="0,10,0,0"
                                                FontFamily="{StaticResource Prototype}"
@@ -184,10 +183,7 @@
                                                Text="{Binding SelectedProfile.Value.Name.Value, Mode=OneWay}"
                                                Visibility="{Binding Profiles, Converter={x:Static data:EnumerableCountGreaterThanOneVisibilityConverter.Instance}, ConverterParameter=reverse}" />
                                     <Menu Grid.Column="1"
-                                          Width="100"
                                           Height="Auto"
-                                          MinWidth="75"
-                                          MaxWidth="75"
                                           Margin="0,0,0,3"
                                           HorizontalAlignment="Right"
                                           VerticalAlignment="Top"
@@ -202,7 +198,7 @@
                                                   BorderThickness="0"
                                                   Cursor="Hand"
                                                   Foreground="#FFFFFFFF"
-                                                  Header="PROFILE:"
+                                                  Header="{Binding SelectedProfile.Value.Name.Value, StringFormat=PROFILE {0}}"
                                                   ItemsSource="{Binding Profiles}"
                                                   WindowChrome.IsHitTestVisibleInChrome="True">
                                             <MenuItem.ItemContainerStyle>
@@ -223,7 +219,7 @@
                                                         <TextBlock FontFamily="{StaticResource Prototype}"
                                                                    FontSize="11"
                                                                    FontWeight="Light"
-                                                                   Text="{Binding Name, Mode=OneWay}">
+                                                                   Text="{Binding Name.Value, Mode=OneWay}">
                                                             <TextBlock.Effect>
                                                                 <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
                                                             </TextBlock.Effect>
