Async lock added for navigation to avoid issue with double clicking tabs and loading 2x Viewport devices and template updates, this is stil la WIP Added custom versioning to support DCS Worlds new "oops we fucked up" version number formatting Moved viewport prefix from module to module viewport template Fixed alignment of reset button in options Fixed settings formatting, added proper indenting to the UI Fixed not being able to scroll the settings categories

--- a/DCS.Alternative.Launcher/Views/Settings/Controls/OptionsControl.xaml
+++ b/DCS.Alternative.Launcher/Views/Settings/Controls/OptionsControl.xaml
@@ -144,6 +144,7 @@
                         <Button Grid.Row="0"
                                 Grid.RowSpan="2"
                                 Grid.Column="2"
+                                VerticalAlignment="Center"
                                 Command="{Binding DataContext.ResetCommand, RelativeSource={RelativeSource AncestorType={x:Type local:OptionsControl}}}"
                                 CommandParameter="{Binding}"
                                 Content="RESET"
@@ -192,6 +193,7 @@
                         <Button Grid.Row="0"
                                 Grid.RowSpan="2"
                                 Grid.Column="2"
+                                VerticalAlignment="Center"
                                 Command="{Binding DataContext.ResetCommand, RelativeSource={RelativeSource AncestorType={x:Type local:OptionsControl}}}"
                                 CommandParameter="{Binding}"
                                 Content="RESET"
@@ -282,6 +284,7 @@
                         <Button Grid.Row="0"
                                 Grid.RowSpan="2"
                                 Grid.Column="2"
+                                VerticalAlignment="Center"
                                 Command="{Binding DataContext.ResetCommand, RelativeSource={RelativeSource AncestorType={x:Type local:OptionsControl}}}"
                                 CommandParameter="{Binding}"
                                 Content="RESET"
@@ -353,6 +356,7 @@
                         <Button Grid.Row="0"
                                 Grid.RowSpan="2"
                                 Grid.Column="2"
+                                VerticalAlignment="Center"
                                 Command="{Binding DataContext.ResetCommand, RelativeSource={RelativeSource AncestorType={x:Type local:OptionsControl}}}"
                                 CommandParameter="{Binding}"
                                 Content="RESET"
@@ -398,6 +402,7 @@
                         <Button Grid.Row="0"
                                 Grid.RowSpan="2"
                                 Grid.Column="2"
+                                VerticalAlignment="Center"
                                 Command="{Binding DataContext.ResetCommand, RelativeSource={RelativeSource AncestorType={x:Type local:OptionsControl}}}"
                                 CommandParameter="{Binding}"
                                 Content="RESET"
