--- a/DCS.Alternative.Launcher/Views/Settings/Views/SettingsView.xaml
+++ b/DCS.Alternative.Launcher/Views/Settings/Views/SettingsView.xaml
@@ -39,6 +39,28 @@
                             ItemsSource="{Binding Categories}"
                             SelectedItem="{Binding SelectedCategory.Value, Mode=TwoWay}"
                             TabStripPlacement="Left">
+                    <TabControl.Template>
+                        <ControlTemplate TargetType="TabControl">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+                                    <TabPanel x:Name="HeaderPanel"
+                                              Margin="2,2,2,0"
+                                              Panel.ZIndex="1"
+                                              IsItemsHost="true"
+                                              KeyboardNavigation.TabIndex="1" />
+                                </ScrollViewer>
+                                <ContentPresenter x:Name="PART_SelectedContentHost"
+                                                  Grid.Column="1"
+                                                  Margin="{TemplateBinding Padding}"
+                                                  ContentSource="SelectedContent"
+                                                  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                            </Grid>
+                        </ControlTemplate>
+                    </TabControl.Template>
                     <TabControl.Resources>
 
                         <data:BooleanToThicknessConverter x:Key="BooleanToThicknessConverter"
