Added some descriptions for settings Fixed a bug in the dcs process monitor Fixed the UI after update, DAL will now re-evaluate the current DCS version.

--- a/DCS.Alternative.Launcher/Views/Settings/Controls/OptionsControl.xaml
+++ b/DCS.Alternative.Launcher/Views/Settings/Controls/OptionsControl.xaml
@@ -125,8 +125,9 @@
                                    Margin="0,3,0,0"
                                    VerticalAlignment="Center"
                                    FontFamily="{StaticResource Prototype}"
-                                   FontSize="14"
-                                   Foreground="#FFFFFFFF"
+                                   FontSize="12"
+                                   FontWeight="Light"
+                                   Foreground="#FFAFAFAF"
                                    Text="{Binding Description}"
                                    TextWrapping="Wrap" />
                         <TextBox Grid.Row="0"
@@ -312,8 +313,9 @@
                                    Margin="0,3,0,0"
                                    VerticalAlignment="Center"
                                    FontFamily="{StaticResource Prototype}"
-                                   FontSize="14"
-                                   Foreground="#FFFFFFFF"
+                                   FontSize="12"
+                                   FontWeight="Light"
+                                   Foreground="#FFAFAFAF"
                                    Text="{Binding Description}"
                                    TextWrapping="Wrap" />
                         <Grid Grid.Row="0"
@@ -384,8 +386,9 @@
                                    Margin="0,3,0,0"
                                    VerticalAlignment="Center"
                                    FontFamily="{StaticResource Prototype}"
-                                   FontSize="14"
-                                   Foreground="#FFFFFFFF"
+                                   FontSize="12"
+                                   FontWeight="Light"
+                                   Foreground="#FFAFAFAF"
                                    Text="{Binding Description}"
                                    TextWrapping="Wrap" />
                         <ToggleButton Grid.Row="0"
